--- a/css/flash.css
+++ b/css/flash.css
@@ -4,10 +4,13 @@
 }
 
 #content {
+  /*width: 100%;
+  height: 100%;*/
   width: 600px;
   height: 300px;
   position: absolute;
   overflow: hidden;
+  left: 100px;
 }
 
 .content-wrap-bg {
@@ -15,11 +18,34 @@
 }
 
 .animals {
-  width: 20px;
-  height: 20px;
-  background-color: blue;
+  /*display: none;*/
+  width: 200px;
+  height: 200px;
   position: absolute;
   z-index: 1;
   top: 0px;
   right: 0px;
+  transform: scale(0.3);
+}
+/*#dog {
+  background-color: blue;
+  z-index: 2;
+}
+#cat {
+  background-color: red;
+}*/
+#daxiang {
+  background: url('../pic/animals/daxiang.gif');
+}
+.show {
+  animation: show 3s linear;
+}
+@keyframes show {
+  0% { right: 100% }
+  100% { right: 0 }
+}
+
+@keyframes out {
+  0% { right: 100% }
+  100% { right: 0 }
 }
