--- a/css/flash.css
+++ b/css/flash.css
@@ -4,17 +4,23 @@
 }
 
 #content {
-  /*width: 100%;
-  height: 100%;*/
-  width: 600px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
+  /*width: 600px;
+  height: 300px;*/
   position: absolute;
   overflow: hidden;
-  left: 100px;
 }
 
 .content-wrap-bg {
   position: relative;
+  z-index: 10;
+}
+
+.content-sky {
+  position: absolute;
+  top: 0%;
+
 }
 
 .animals {
@@ -25,24 +31,23 @@
   z-index: 1;
   top: 0px;
   right: 0px;
-  transform: scale(0.3);
+  -moz-transform:scale(0.8);
+  -webkit-transform:scale(0.8);
+  -o-transform:scale(0.8);
+  transform: scale(0.8);
 }
-/*#dog {
-  background-color: blue;
-  z-index: 2;
-}
-#cat {
-  background-color: red;
-}*/
 #daxiang {
-  background: url('../pic/animals/daxiang.gif');
+  background: url('../pic/animals/daxiang.png');
 }
-.show {
-  animation: show 3s linear;
+.daxiang {
+  animation: daxiang 5s linear;
+  right: 20%;
+  top: 60%;
 }
-@keyframes show {
-  0% { right: 100% }
-  100% { right: 0 }
+@keyframes daxiang {
+  0% { right: 0%; top: 40%;transform: scale(0.1);  }
+  50% {right: 30%; top: 50%;transform: scale(0.4);}
+  100% { right: 20%; top: 60%;transform: scale(0.8); }
 }
 
 @keyframes out {
