--- a/css/flash.css
+++ b/css/flash.css
@@ -13,22 +13,23 @@
 }
 
 .content-wrap-bg {
-  position: relative;
-  z-index: 10;
+  position: absolute;;
+  z-index: 3;
 }
 
 .content-sky {
-  position: absolute;
-  top: 0%;
+  position: absolute;;
+  z-index: 2;
+  /*top: 0%;*/
 
 }
 
 .animals {
-  /*display: none;*/
+  display: none;
   width: 200px;
   height: 200px;
   position: absolute;
-  z-index: 1;
+  z-index: 3;
   top: 0px;
   right: 0px;
   -moz-transform:scale(0.8);
@@ -38,19 +39,87 @@
 }
 #daxiang {
   background: url('../pic/animals/daxiang.png');
+  /*background-color: blue;*/
+}
+#baozi {
+  background: url('../pic/animals/baozi.png');
+  /*background-color: blue;*/
+}
+#fenghuang {
+  background: url('../pic/animals/fenghuang.png');
+  /*background-color: blue;*/
+}
+#banma {
+  background: url('../pic/animals/banma.png');
+  /*background-color: blue;*/
+}
+#changjinglu {
+  background: url('../pic/animals/changjinglu.png');
+  /*background-color: blue;*/
+}
+#dog {
+  background: url('../pic/animals/dog.png');
+  /*background-color: blue;*/
 }
 .daxiang {
-  animation: daxiang 5s linear;
+  animation: daxiang 7s linear;
   right: 20%;
   top: 60%;
+  display: block;
+}
+.baozi {
+  animation: baozi 7s linear;
+  right: 25%;
+  top: 60%;
+  display: block;
+}
+.fenghuang {
+  animation: fenghuang 7s linear;
+  right: 30%;
+  top: 60%;
+  display: block;
+}
+.banma {
+  animation: banma 7s linear;
+  right: 35%;
+  top: 60%;
+  display: block;
+}
+.changjinglu {
+  animation: changjinglu 7s linear;
+  right: 40%;
+  top: 60%;
+  display: block;
+}
+.dog {
+  animation: dog 7s linear;
+  right: 45%;
+  top: 60%;
+  display: block;
 }
 @keyframes daxiang {
-  0% { right: 0%; top: 40%;transform: scale(0.1);  }
-  50% {right: 30%; top: 50%;transform: scale(0.4);}
+  0% { right: 10%; top: 20%;transform: scale(0.1);}
+  50% {right: 30%; top: 50%;transform: scale(0.8);}
   100% { right: 20%; top: 60%;transform: scale(0.8); }
 }
-
-@keyframes out {
-  0% { right: 100% }
-  100% { right: 0 }
+@keyframes baozi {
+  0% { right: 20%; top: 20%;transform: scale(0.1);}
+  50% {right: 40%; top: 50%;transform: scale(0.8);}
+  100% { right: 25%; top: 60%;transform: scale(0.8); }
+}@keyframes fenghuang {
+  0% { right: 30%; top: 20%;transform: scale(0.1);}
+  50% {right: 35%; top: 50%;transform: scale(0.8);}
+  100% { right: 30%; top: 60%;transform: scale(0.8); }
+}@keyframes banma {
+  0% { right: 40%; top: 20%;transform: scale(0.1);}
+  50% {right: 20%; top: 50%;transform: scale(0.8);}
+  100% { right: 35%; top: 60%;transform: scale(0.8); }
+}@keyframes changjinglu {
+  0% { right: 50%; top: 20%;transform: scale(0.1);}
+  50% {right: 30%; top: 50%;transform: scale(0.8);}
+  100% { right: 40%; top: 60%;transform: scale(0.8); }
+}@keyframes dog {
+  0% { right: 60%; top: 20%;transform: scale(0.1);}
+  50% {right: 35%; top: 50%;transform: scale(0.8);}
+  100% { right: 45%; top: 60%;transform: scale(0.8); }
 }
