--- a/css/flash.css
+++ b/css/flash.css
@@ -76,7 +76,7 @@
 .fenghuang {
   animation: fenghuang 7s linear;
   right: 45%;
-  top: 60%;
+  top: -5%;
   display: block;
 }
 .banma {
@@ -99,27 +99,29 @@
 }
 @keyframes daxiang {
   0% { right: 10%; top: 15%;transform: scale(0.2);}
-  /*50% {right: 20%; top: 50%;transform: scale(0.8);}*/
   100% { right: 30%; top: 60%;transform: scale(0.8); }
 }
 @keyframes baozi {
   0% { right: 15%; top: 15%;transform: scale(0.2);}
-  /*60% {right: 30%; top: 50%;transform: scale(0.8);}*/
   100% { right: 35%; top: 65%;transform: scale(0.8); }
 }@keyframes fenghuang {
-  0% { right: 20%; top: 15%;transform: scale(0.2);}
-  /*55% {right: 35%; top: 50%;transform: scale(0.8);}*/
-  100% { right: 45%; top: 60%;transform: scale(0.8); }
+  0% { right: 60%; top: 10%;transform: scale(0.2);}
+  100% { right: 45%; top: -5%;transform: scale(0.8); }
 }@keyframes banma {
   0% { right: 30%; top: 20%;transform: scale(0.2);}
-  /*65% {right: 45%; top: 50%;transform: scale(0.8);}*/
   100% { right: 55%; top: 63%;transform: scale(0.8); }
 }@keyframes changjinglu {
   0% { right: 40%; top: 20%;transform: scale(0.2);}
-  /*55% {right: 55%; top: 50%;transform: scale(0.8);}*/
   100% { right: 60%; top: 66%;transform: scale(0.8); }
 }@keyframes dog {
   0% { right: 60%; top: 20%;transform: scale(0.2);}
-  /*50% {right: 55%; top: 50%;transform: scale(0.8);}*/
   100% { right: 45%; top: 60%;transform: scale(0.8); }
+}
+
+
+
+/*后出场动物*/
+@keyframes daxiang {
+  0% { right: 10%; top: 15%;transform: scale(0.2);}
+  100% { right: 30%; top: 60%;transform: scale(0.8); }
 }
