--- a/css/flash.css
+++ b/css/flash.css
@@ -31,16 +31,16 @@
 
 .animals {
   display: none;
-  width: 200px;
-  height: 200px;
+  width: 350px;
+  height: 350px;
   position: absolute;
   z-index: 3;
   top: 0px;
   right: 0px;
-  -moz-transform:scale(0.8);
-  -webkit-transform:scale(0.8);
-  -o-transform:scale(0.8);
-  transform: scale(0.8);
+  -moz-transform:scale(0.6);
+  -webkit-transform:scale(0.6);
+  -o-transform:scale(0.6);
+  transform: scale(0.6);
 }
 #daxiang {
   background: url('../pic/animals/daxiang.png');
@@ -87,7 +87,7 @@
   /*background-color: blue;*/
 }
 #laoshu {
-  background: url('../pic/animals/laoshu.png');
+  background: url('../pic/animals/laoshu.gif');
   /*background-color: blue;*/
 }
 #yang {
@@ -168,31 +168,31 @@
 
 @keyframes daxiang {
   0% { right: 10%; top: 15%;transform: scale(0.2);}
-  100% { right: 23%; top: 45%;transform: scale(0.8); }
+  100% { right: 23%; top: 45%;transform: scale(0.6); }
 }
 @keyframes baozi {
   0% { right: 15%; top: 15%;transform: scale(0.2);}
-  100% { right: -10%; top: 65%;transform: scale(0.8); }
+  100% { right: -10%; top: 65%;transform: scale(0.6); }
 }
 @keyframes fenghuang {
   0% { right: 60%; top: 10%;transform: scale(0.2);}
-  100% { right: 45%; top: -5%;transform: scale(0.8); }
+  100% { right: 45%; top: -5%;transform: scale(0.6); }
 }
 @keyframes banma {
   0% { right: 30%; top: 20%;transform: scale(0.2);}
-  100% { right: 23%; top: 64%;transform: scale(0.8); }
+  100% { right: 23%; top: 64%;transform: scale(0.6); }
 }
 @keyframes changjinglu {
   0% { right: 40%; top: 20%;transform: scale(0.2);}
-  100% { right: 31%; top: 47%;transform: scale(0.8); }
+  100% { right: 31%; top: 47%;transform: scale(0.6); }
 }
 @keyframes dog {
   0% { right: 50%; top: 20%;transform: scale(0.2);}
-  100% { right: 35%; top: 50%;transform: scale(0.8); }
+  100% { right: 35%; top: 50%;transform: scale(0.6); }
 }
 @keyframes she {
   0% { right: 10%; top: 15%;transform: scale(0.2);}
-  100% { right: 15%; top: 50%;transform: scale(0.8); }
+  100% { right: 15%; top: 50%;transform: scale(0.6); }
 }
 
 
@@ -242,31 +242,31 @@
 }
 @keyframes houzi {
   0% { right: 10%; top: 15%;transform: scale(0.2);}
-  100% { right: 0%; top: 60%;transform: scale(0.8); }
+  100% { right: 0%; top: 60%;transform: scale(0.6); }
 }
 @keyframes ji {
   0% { right: -10%; top: 15%;transform: scale(0.2);}
-  100% { right: 10%; top: 65%;transform: scale(0.8); }
+  100% { right: 10%; top: 65%;transform: scale(0.6); }
 }
 @keyframes laoying {
   0% { right: 70%; top: 15%;transform: scale(0.2);}
-  100% { right: 33%; top: -8%;transform: scale(0.8); }
+  100% { right: 33%; top: -8%;transform: scale(0.6); }
 }
 @keyframes long {
   0% { right: 10%; top: 15%;transform: scale(0.2);}
-  100% { right: 16%; top: 5%;transform: scale(0.8); }
+  100% { right: 16%; top: 5%;transform: scale(0.6); }
 }
 @keyframes laoshu {
   0% { right: 60%; top: 15%;transform: scale(0.2);}
-  100% { right: 38%; top: 65%;transform: scale(0.8); }
+  100% { right: 38%; top: 65%;transform: scale(0.6); }
 }
 @keyframes yang {
   0% { right: 10%; top: 15%;transform: scale(0.2);}
-  100% { right: 6%; top: 50%;transform: scale(0.8); }
+  100% { right: 6%; top: 50%;transform: scale(0.6); }
 }
 @keyframes laohu {
   0% { right: 25%; top: 15%;transform: scale(0.2);}
-  100% { right: 30%; top: 60%;transform: scale(0.8); }
+  100% { right: 30%; top: 60%;transform: scale(0.6); }
 }
 
  /*2s后出场 牛 熊猫 猪 企鹅 狮子 兔子*/
@@ -309,27 +309,27 @@
  /*牛 熊猫 猪 企鹅 狮子 兔子*/
  @keyframes niu {
    0% { right: 65%; top: 15%;transform: scale(0.2);}
-   100% { right: 50%; top: 60%;transform: scale(0.8); }
+   100% { right: 50%; top: 60%;transform: scale(0.6); }
  }
  @keyframes panda {
    0% { right: 75%; top: 30%;transform: scale(0.2);}
-   100% { right: 55%; top: 50%;transform: scale(0.8); }
+   100% { right: 55%; top: 50%;transform: scale(0.6); }
  }
  @keyframes pig {
    0% { right: 66%; top: 15%;transform: scale(0.2);}
-   100% { right: 60%; top: 60%;transform: scale(0.8); }
+   100% { right: 60%; top: 60%;transform: scale(0.6); }
  }
  @keyframes qie {
    0% { right: 47%; top: 25%;transform: scale(0.2);}
-   100% { right: 41%; top: 50%;transform: scale(0.8); }
+   100% { right: 41%; top: 50%;transform: scale(0.6); }
  }
  @keyframes shizi {
    0% { right: 10%; top: 35%;transform: scale(0.2);}
-   100% { right: -15%; top: 65%;transform: scale(0.8); }
+   100% { right: -15%; top: 65%;transform: scale(0.6); }
  }
  @keyframes tuzi {
    0% { right: 20%; top: 15%;transform: scale(0.2);}
-   100% { right: -15%; top: 60%;transform: scale(0.8); }
+   100% { right: -15%; top: 60%;transform: scale(0.6); }
  }
 
 .jump {
