--- a/css/flash.css
+++ b/css/flash.css
@@ -424,9 +424,9 @@
   min-height: 40px;
   width: 5%;
   height: 6%;
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 5px;
-  opacity: 0.8;
+  opacity: 0.6;
   font-family: '微软雅黑',sans-serif;
   text-align: center;
   font-size: 40px;
@@ -448,24 +448,24 @@
   z-index: 40;
   bottom: 75px;
   left: 20.4%;
-  background-color: pink;
-  opacity: 0.5;
+  background-color: #ca0083;
+  opacity: 0.6;
 }
 .two {
   position: fixed;
   z-index: 40;
   bottom: 75px;
   left: 30.4%;
-  background-color: yellow;
-  opacity: 0.4;
+  background-color: #df6d00;
+  opacity: 0.6;
 }
 .three {
   position: fixed;
   z-index: 40;
   bottom: 75px;
   left: 41%;
-  background-color: yellow;
-  opacity: 0.4;
+  background-color: #df6d00;
+  opacity: 0.6;
 }
 .four {
   position: fixed;
